Fixed playlist name alignment in Playlist screen.

--- a/client/src/styles/css/index.css
+++ b/client/src/styles/css/index.css
@@ -841,7 +841,7 @@ code {
   flex-direction: column;
   justify-content: center;
   height: 100%;
-  width: 30%;
+  width: 35%;
   margin-right: 6%;
 }
 .playlistScreenLeftContainer {
@@ -850,6 +850,7 @@ code {
   width: 100%;
   height: 100%;
   user-select: none;
+  overflow-x: hidden;
 }
 
 .playlistPlayAllButton {
@@ -871,6 +872,7 @@ code {
 .playlistScreenInfo {
   margin-left: 2%;
   display: flex;
+  width: 100%;
 }
 
 .playlistMetadata {
@@ -887,14 +889,14 @@ code {
 
 .playlistTitle {
   margin-top: 3%;
-  word-wrap: break-word;
-  font-size: 22px;
+  font-size: 20px;
   border-style: none;
+  width: 120%;
 }
 
 .playlistTitleDivider {
   margin-top: -4%;
-  width: 95%;
+  width: 136%;
 }
 
 .playlistGenreLabel {
